separate tsconfigs and install @types/node for using in scripts folder only

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
 		"lib": ["ESNext"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx",
-		"types": ["./worker-configuration.d.ts"]
-	}
+		"types": ["./worker-configuration.d.ts"],
+		"paths": {
+			"@/*": ["./*"]
+		}
+	},
+	"include": ["src"]
 }
